--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,7 @@
 security:
     role_hierarchy:
-       # ROLE_EDITOR:    ROLE_USER
+       # ROLE_MODERATOR: ROLE_USER
+        ROLE_EDITOR:    ROLE_MODERATOR
         ROLE_ADMIN:     ROLE_EDITOR
 
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
