role moderator et recuperation des commentaires associé à un post

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,9 @@
 security:
     role_hierarchy:
-       # ROLE_MODERATOR: ROLE_USER
-        ROLE_EDITOR:    ROLE_MODERATOR
-        ROLE_ADMIN:     ROLE_EDITOR
+   
+        # ROLE_SUPER_USER: ROLE_USER
+        ROLE_EDITOR: ROLE_MODERATOR
+        ROLE_ADMIN: ROLE_EDITOR
 
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
